# codebase-notebook

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
cli/: README.md  cbnb.mjs  lib.mjs  package.json
mcp-server/: README.md  package-lock.json  package.json  server.mjs
scripts/: bump-version.mjs  make-demo-gif.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/application/: mod.rs
src-tauri/src/application/tools/: github.rs  mod.rs  search.rs
src-tauri/src/application/usecases/: agent.rs  ask.rs  backup.rs  chat.rs  index.rs  mod.rs  notes.rs  provider.rs  publish.rs  repository.rs  search.rs  workspace.rs
src-tauri/src/domain/: chunking.rs  error.rs  mod.rs
src-tauri/src/domain/entities/: chat.rs  chunk.rs  document.rs  mod.rs  provider.rs  repository.rs  usage.rs  workspace.rs
src-tauri/src/domain/repositories/: mod.rs
src-tauri/src/domain/services/: mod.rs
src-tauri/src/infrastructure/: mod.rs  reveal.rs
src-tauri/src/infrastructure/connectors/: asana.rs  backlog.rs  confluence.rs  mod.rs  notion.rs  slack.rs
src-tauri/src/infrastructure/indexing/: ast_chunker.rs  extract.rs  git.rs  github_issues.rs  mod.rs  scanner.rs  watch.rs
src-tauri/src/infrastructure/persistence/: chat_repo.rs  document_repo.rs  mod.rs  provider_repo.rs  repository_repo.rs  settings_repo.rs  usage_repo.rs  workspace_repo.rs
src-tauri/src/infrastructure/providers/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai_compat.rs  router.rs
src-tauri/src/infrastructure/secrets/: keyring_store.rs  mod.rs  scanner.rs
src-tauri/src/presentation/: commands.rs  http_api.rs  mod.rs  state.rs
src-tauri/tests/: integration.rs  realdoc_smoke.rs
src/application/: useAppVersion.ts  useChat.ts  useProviders.ts  useRepositories.ts  useSessions.ts  useWorkspaces.ts
src/domain/: types.ts
src/infrastructure/: api.ts  i18n.ts
src/locales/: en.json  ja.json
src/presentation/components/: ChatView.tsx  CodeEditor.tsx  CommandPalette.tsx  ConsentDialog.tsx  DocumentEditor.tsx  MentionInput.tsx  MessageBubble.tsx  OllamaBanner.tsx  PublishPanel.tsx  SettingsView.tsx  SourceEditor.tsx  UpdateBanner.tsx  WorkspaceHome.tsx  WorkspaceSidebar.tsx
vscode-extension/: README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts
