[package]
name = "codebase-notebook"
version = "0.12.0-dev.0"
description = "Local-first, source-grounded knowledge notebook for engineers"
authors = ["spcsft"]
license = "MIT"
repository = "https://github.com/shint1015/codebase-notebook"
edition = "2021"

[lib]
name = "codebase_notebook_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
walkdir = "2"
regex = "1"
notify = "7"
tiny_http = "0.12"
base64 = "0.22"
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
keyring = { version = "3", features = ["apple-native", "windows-native"] }
tokio = { version = "1", features = ["sync"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.37"
calamine = "0.26"
pdf-extract = "0.7"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
